publishing to github pages

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "homepage": "https://github.com/ArtemTishenko/mesto-react",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
+  "author": "Artem Tishenko",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,6 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -36,8 +39,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://github.com/ArtemTishenko/mesto-react"
+    ]
     
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ArtemTishenko/mesto-react.git"
   }
+  
 }
