publishing to github pages1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ArtemTishenko/mesto-react",
+  "homepage": "https://artemtishenko.github.io/mesto-react/",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
